# Linux_Homeworks

DiningPhilosophers/: main.cpp
ENV-2/: CMakeLists.txt  Complex.cpp  Complex.h  Sort.cpp  Sort.h  main.cpp
FS-1/: Makefile  read-file.cpp
FS-2/: Makefile  simple-copy.cpp
FS-3/: Makefile  hacker-rm.cpp
FS-4/: Makefile  redirect-cin.cpp  ss
FS-5/: Makefile  manual-append.cpp
FS-6/: Makefile  d  k.cpp
FS-7/: b  ftf.cpp
IPC-2/: main.cpp
MSS/: mutex.cpp  semaphore.cpp  spinlock.cpp
PS-1/: b.txt  docommand.cpp
PS-2/: 1.txt  1234.txt  Makefile  a.out  g.cpp  ishell.cpp  shpa.txt  t.txt
RPC1/: client.cpp  server.cpp
TH-1/: Makefile  main.cpp
TH-2/: Makefile  main.cpp  parallel_scheduler.cpp
first_request/: main.cpp
poll1/: client.cpp  server.cpp
smokers/: g.cpp
socket-1/: client.cpp  server.cpp
socket-2/: client.cpp  server.cpp
